   * new key "centered=yes" in [story] to use center of images (like dots)
     on the given map coordinates.
   * kill the obsolete "flip" key in [story], use imagepath function
    "~FL(horiz/vert)" instead
 * user interface:
   * preserve aspect ratio of the minimap (FR/bug #9999)
   * the debug "Create unit" dialog have now two columns (race and type) and is
     correctly sorted.
   * The linger mode "Next Scenario" button renamed to "End Scenario"
   * improved the display of the trait descriptions
 * multiplayer:
   * renamed maps:
     * Blitz to Weldyn Channel
     * Charge to The Freelands
     * Meteor Lake to Fallenstar Lake
     * Triple Blitz to Alirok Marsh
   * revised maps: Caves of the Basilisk, Weldyn Channel
   * minimum number of turns reduced to 1
   * new option to allow female leaders by default instead of male leaders
   * fixed a crash if the client receives invalid utf-8
   * fixed a server side bug with could cause invalid utf-8 being send to a
     client.
   * display the era id for not installed eras in the lobby.
   * display the scenario id for unknown scenarios in the lobby.
 * units:
   * balancing changes:
     * created undead variations for the 'bat' and 'gryphon' race
 * miscellaneous and bug fixes:
   * various bug fixes and code cleanups
   * fixed a glitch where an item halo shifted position when zooming
   * map label length is correctly determined for multibyte characters
     and thus the limit has been reduced to 32 characters again (bug #6855)
   * now using :n in debug mode will skip past linger mode as intended
   * fix a bug with [endlevel] result=continue_no_save
   * fixed a bug where some strings were resized in utf-8 unaware mode
   * fix bug #9021 (team color names not directly translated when switching
     language)
   * optimize the random map generator (especially for high village density)

Version 1.3.8:
 * campaigns:
   * Descent into Darkness