@@ -60,6 +60,8 @@ Version 1.3.9:
    * preserve aspect ratio of the minimap (FR/bug #9999)
    * the debug "Create unit" dialog have now two columns (race and type) and is
      correctly sorted.
+   * progressive parameters can be specified both in [animation] and in
+   [frame]
    * The linger mode "Next Scenario" button renamed to "End Scenario"
    * improved the display of the trait descriptions
  * multiplayer:
